--- a/MVC_jobproject/Views/ApplyCV/cv_pageload.cshtml
+++ b/MVC_jobproject/Views/ApplyCV/cv_pageload.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Apply</h2>
 <div>
-    @using (Html.BeginForm("apply_click", "CVApply", FormMethod.Post, new { enctype = "multipart/form-data" }))
+    @using (Html.BeginForm("apply_click", "ApplyCV", FormMethod.Post, new { enctype = "multipart/form-data" }))
     {
         <div>
             <label>Photo:</label>
